correção no css da atividade 3

--- a/03-website-flexbox/styles.css
+++ b/03-website-flexbox/styles.css
@@ -117,6 +117,10 @@ footer {
         align-items: flex-start;
     }
 
+    nav img {
+        width: 30px;
+    }
+
     #menu-toggle {
         display: block;
     }
